@@ -18,9 +18,6 @@ doc/.deps/
 doc/.libs/
 doc/Makefile
 doc/Makefile.in
-doc/abstraction.pdf
-doc/controlflow.pdf
-doc/controlflow2.pdf
 doc/coverage/
 doc/cyclo/Makefile
 doc/cyclo/Makefile.in
@@ -28,7 +25,10 @@ doc/cyclo/cyclo-gsasl.html
 doc/doxygen/Doxyfile
 doc/doxygen/html/
 doc/doxygen/latex/
+doc/gsasl-abstraction.pdf
 doc/gsasl-api-error-labels.texi
+doc/gsasl-controlflow.pdf
+doc/gsasl-controlflow2.pdf
 doc/gsasl.1
 doc/gsasl.aux
 doc/gsasl.cp
