@@ -62,7 +62,7 @@ IGNORE_HFILES=internal.h
 
 # Images to copy into HTML directory.
 # e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
-HTML_IMAGES=../abstraction.png ../controlflow.png ../controlflow2.png
+HTML_IMAGES=../gsasl-abstraction.png ../gsasl-controlflow.png ../gsasl-controlflow2.png
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE).
 # e.g. content_files=running.sgml building.sgml changes-2.0.sgml
