@@ -8,6 +8,10 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.9.2 (unreleased) [beta]
 
+** Filenames of images in manual are now prefixed with 'gsasl-'.
+This makes /usr/share/info more understandable, and it is suggested by
+at least Debian to do this in upstream.
+
 ** Build changes.
 Some more compiler warnings used and code fixed.  Improved ./configure
 diagnostics.
